<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/navigation_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/navigation_back_arrow"
            app:srcCompat="@drawable/icon_arrow_back" />

        <TextView
            android:id="@+id/email_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_up_header_message"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/shadow"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14sp"
                tools:text="Mike" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/shadow"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14sp"
                tools:text="Rodger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_address"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/shadow"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14sp"
                tools:text="mike@rodger.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/shadow"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_header"
                tools:text="mike@rodger.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/confirm_password"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/shadow"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_header"
                tools:text="mike@rodger.com" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:backgroundTint="@android:color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sign_up" />

                <ProgressBar
                    android:id="@+id/sign_up_progressbar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25ssp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>